--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,14 @@
     left: 230px;
     z-index: -1;
 }
+.play-card{
+    height: 250px;
+    width: 200px;
+}
+#win-box{
+    padding-left: 120px;
+    color: red;
+}
+#head{
+    padding-left: 80px;
+}
