--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,19 @@
     z-index: -1;
 }
 .play-card{
-    height: 250px;
-    width: 200px;
+    height: 200px;
+    width: 150px;
 }
 #win-box{
-    position: absolute;
-    padding-left: 120px;
     color: red;
 }
 #head{
     padding-left: 80px;
+}
+#new-game{
+    margin: 10px 20px 0px 20px;
+    height: 40px;
+    border-style: groove;
+    border-width: 1px;
+    border-color: darkslategrey;
 }
